# File-Manager

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
src/file_manager/: __init__.py  file_manager.py
