[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-manager-starlink"
version = "0.1.3"
authors = [
  { name="Starlink", email="starlink.dis.13510@gmail.com" },
]
description = "Simplified library for managing files and folders"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "send2trash",
]

[tool.setuptools.packages.find]
where = ["src"]